@@ -347,7 +347,7 @@ public class TemplatePrecision implements Precision {
     Set<Template> templates = new HashSet<>();
 
     for (CFANode node : cfa.nodes()) {
-      for (CFAEdge edge : CFAUtils.leavingEdges(node)) {
+      for (CFAEdge edge : node.getLeavingEdges()) {
         String statement = edge.getRawStatement();
         Optional<LinearExpression<CIdExpression>> template = Optional.empty();
 
@@ -355,7 +355,7 @@ public class TemplatePrecision implements Precision {
         // do not hardcode the function names.
         if (statement.contains(ASSERT_H_FUNC_NAME) && edge instanceof CStatementEdge) {
 
-          for (CFAEdge enteringEdge : CFAUtils.enteringEdges(node)) {
+          for (CFAEdge enteringEdge : node.getEnteringEdges()) {
             if (enteringEdge instanceof CAssumeEdge assumeEdge) {
               CExpression expression = assumeEdge.getExpression();
 
@@ -369,7 +369,7 @@ public class TemplatePrecision implements Precision {
           if (callEdge.getArguments().isEmpty()) {
             continue;
           }
-          CExpression expression = callEdge.getArguments().get(0);
+          CExpression expression = callEdge.getArguments().getFirst();
           template = expressionToSingleTemplate(expression);
         }
 
@@ -449,11 +449,11 @@ public class TemplatePrecision implements Precision {
   private Collection<LinearExpression<CIdExpression>> extractTemplatesFromStatementEdge(
       CStatementEdge edge) {
     CStatement statement = edge.getStatement();
-    if (statement instanceof CExpressionStatement) {
-      return expressionToTemplate(((CExpressionStatement) statement).getExpression());
-    } else if (statement instanceof CExpressionAssignmentStatement) {
+    if (statement instanceof CExpressionStatement cExpressionStatement) {
+      return expressionToTemplate(cExpressionStatement.getExpression());
+    } else if (statement instanceof CExpressionAssignmentStatement assignment) {
       Set<LinearExpression<CIdExpression>> out = new HashSet<>();
-      CExpressionAssignmentStatement assignment = (CExpressionAssignmentStatement) statement;
+
       CLeftHandSide lhs = assignment.getLeftHandSide();
       if (lhs instanceof CIdExpression id) {
         out.addAll(expressionToTemplate(assignment.getRightHandSide()));
@@ -494,14 +494,14 @@ public class TemplatePrecision implements Precision {
       // Special handling for constants and multiplication.
       if (operator == BinaryOperator.MULTIPLY && (templateA.isPresent() || templateB.isPresent())) {
 
-        if (operand1 instanceof CIntegerLiteralExpression && templateB.isPresent()) {
+        if (operand1 instanceof CIntegerLiteralExpression cIntegerLiteralExpression
+            && templateB.isPresent()) {
 
-          return Optional.of(
-              useCoeff((CIntegerLiteralExpression) operand1, templateB.orElseThrow()));
-        } else if (operand2 instanceof CIntegerLiteralExpression && templateA.isPresent()) {
+          return Optional.of(useCoeff(cIntegerLiteralExpression, templateB.orElseThrow()));
+        } else if (operand2 instanceof CIntegerLiteralExpression cIntegerLiteralExpression
+            && templateA.isPresent()) {
 
-          return Optional.of(
-              useCoeff((CIntegerLiteralExpression) operand2, templateA.orElseThrow()));
+          return Optional.of(useCoeff(cIntegerLiteralExpression, templateA.orElseThrow()));
         } else {
           return Optional.empty();
         }
